--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 
-# Created by https://www.toptal.com/developers/gitignore/api/java,jetbrains+all
-# Edit at https://www.toptal.com/developers/gitignore?templates=java,jetbrains+all
+# Created by https://www.toptal.com/developers/gitignore/api/java,jetbrains+all,maven
+# Edit at https://www.toptal.com/developers/gitignore?templates=java,jetbrains+all,maven
 
 ### Java ###
 # Compiled class file
@@ -119,4 +119,24 @@ modules.xml
 # Sonarlint plugin
 .idea/sonarlint
 
-# End of https://www.toptal.com/developers/gitignore/api/java,jetbrains+all
+### Maven ###
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+# https://github.com/takari/maven-wrapper#usage-without-binary-jar
+.mvn/wrapper/maven-wrapper.jar
+
+### Maven Patch ###
+# Eclipse m2e generated files
+# Eclipse Core
+.project
+# JDT-specific (Eclipse Java Development Tools)
+.classpath
+
+# End of https://www.toptal.com/developers/gitignore/api/java,jetbrains+all,maven
